--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -2,7 +2,7 @@
   group-description:
   charts:
     - title: Change in crime across City of Atlanta
-      summary: The FBI collects information on major crimes from agencies across the United States and the Atlanta Police Department is no exception. The year to date (YTD) change in total major crimes vs. the year before (blue) reported by the Atlanta Police Department (APD) is shown below. Major crimes are tracked based on the FBI's Uniform Crime Reporting (UCR) definition, and includes violent crime (murder and nonnegligent manslaughter, rape, robbery, and aggravated assault) and property crime (burglary, larceny-theft, arson and motor vehicle theft).
+      summary: The FBI collects information on major crimes from agencies across the United States and the Atlanta Police Department is no exception. The total year to date (YTD) change in total major crimes vs. the year before (blue) reported by the Atlanta Police Department (APD) is shown below. Major crimes are tracked based on the FBI's Uniform Crime Reporting (UCR) definition, and includes violent crime (murder and nonnegligent manslaughter, rape, robbery, and aggravated assault) and property crime (burglary, larceny-theft, arson and motor vehicle theft).
       description: Crime in the city is at its lowest level since the 1960's, and the City is on track to meet its target of a 25% reduction in crime during Mayor Reed's administration.
       note:  Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
@@ -21,8 +21,8 @@
       series1-useCsvMetricForXaxisLabel:
 
     - title: Change in crime By Police Zone
-      summary: APD organizes its field division into 6 administrative zones.  APD actively monitors changes and compares crime across these different zones as part of its improvement efforts.  The YTD change in major crimes, as defined by the FBI, compared to the year before for each zone is shown below.
-      description:
+      summary: APD organizes its field division into 6 administrative zones.  APD actively monitors changes and compares crime across these different zones as part of its improvement efforts.  The total YTD change in major crimes, as defined by the FBI, compared to the year before for each zone is shown below.
+      description: YTD numbers in each zone tend to vary more in the first months of the year as smaller fluctuations have a larger impact on year-over-year comparisons. These numbers then tend to smooth out over the course of the year.
       note: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.  To toggle specific zones on or off in the chart, click on the appropriate zone number is the chart legend.
       size: full
       department: APD
