--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -49,7 +49,7 @@
       size: full
       department: APD
       datasource: e911_call_center
-      targetBenchmark:.9
+      targetBenchmark:
       targetLabel:
       targetSeries: 2
       series-grouping: false
