--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -45,12 +45,12 @@
     - title: Total Dispatched Calls and Call Answering Performance
       summary: The City of Atlanta e911 center handles all emergency calls made within city limits. Many of the calls require the dispatching of police services (volume reflected in the blue bar chart below). The center prides itself on being able to answer emergency calls as quickly as possible and actively measures the percent of calls it answers within 10 seconds (red) per industry standards.
       description:
-      note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
+      note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point. The dashed black line represents the stated metric's performance benchmark target.
       size: full
       department: APD
       datasource: e911_call_center
       targetBenchmark: .9
-      targetLabel:
+      targetLabel: Call answering target
       targetSeries: 2
       series-grouping: false
       series1-metric: Volume
